Prevent theme type badge from wrapping long titles (#86343)

--- a/client/my-sites/theme/style.scss
+++ b/client/my-sites/theme/style.scss
@@ -223,11 +223,9 @@ $button-border: 4px;
 	}
 
 	.theme__sheet-main-info-type {
+		flex-basis: unset;
+		font-family: $sans;
 		margin-left: 8px;
-
-		&.is-soft-launched {
-			flex-basis: unset;
-		}
 	}
 
 	.theme__sheet-main-info-tag {
